# Projeto-SPLN

./: README.md
TP1/: 1_descarregar.py  2_estrutura.py  3_arvore_arq.py  4_arvore_dir.py  6_procura.py  7_entidades.py  9_thesaurus.py  README.md  dados_brutos.yaml  get_data.py  registos.html  thesaurus.html
TP2/: .gitignore  README.md  collect_data.py  process_data.py  pyproject.toml  sentence_similarity.ipynb  similarity.py  train_model.py
TP2/checkpoints/model/eval/: similarity_evaluation_results.csv
TP2/data/: doc1.txt  doc2.txt  doc3.txt  training_data.json
TP2/information_retrieval/: information_retrieval.py  pyproject.toml  retrieval.py
