[project]
name = "information_retrieval"
version = "0.0.1"
authors = [
    { name = "Tomás Campinho", email = "pg57742@alunos.uminho.com" },
    { name = "Maria Cunha", email = "pg54042@alunos.uminho.com" },
    { name = "Lingyun Zhu", email = "pg57885@alunos.uminho.com" }
]
description = "Este módulo tem como função calcular a similaridade dos documentos através de um modelo treinado com dados do RepositoriUM."
license = "MIT"
dependencies = ["jjcli"]

[project.scripts]
sim = "information_retrieval.retrieval:main"

[tool.setuptools]
packages = ["information_retrieval"]
include-package-data = true

[tool.setuptools.package-data]
information_retrieval = ["output/repositorium-similarity-model/**/*"]