[project]
name = "information_retrieval"
version = "0.0.1"
authors = [
    { name = "Tomás Campinho", email = "pg57742@alunos.uminho.com" },
    { name = "Maria Cunha", email = "pg54042@alunos.uminho.com" },
    { name = "Lingyun Zhu", email = "pg57885@alunos.uminho.com" }
]
description = "Este módulo tem como função calcular a similaridade dos documentos através de um modelo treinado com dados do RepositoriUM."
license = "MIT"  # Corrigido: SPDX string simples em vez de tabela
dependencies = [ "jjcli"]


[project.scripts]
sim = "information_retrieval:main"

[tool.setuptools]
py-modules = ["information_retrieval"]
